Fix form alignment

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,12 +9,16 @@
   justify-content: center;
 }
 
-form h2 {
-  padding-left: 20px;
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .submitted-info {
-  padding-left: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .edit-button {
